force-app/main/default/objects/C360_BankGuarantee__c.object
<CustomObject>
    <fields>
        <fullName>AdditionalInformation__c</fullName>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AllowedOverdraft__c</fullName>
        <label>Allowed Overdraft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BankGuaranteeSAPNumber__c</fullName>
        <label>Bank Guarantee SAP Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankName__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankNumber__c</fullName>
        <label>Bank Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyCode__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CompanyCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDateTime__c</fullName>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Bank_Guarantee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateOfReceipt__c</fullName>
        <label>Date of Receipt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DocumentStatus__c</fullName>
        <label>Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpiryDate__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incoterms1__c</fullName>
        <label>Incoterms 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Incoterm</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incoterms2__c</fullName>
        <label>Incoterms 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Fin Doc.</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LatestShippingDate__c</fullName>
        <label>Latest Shipping Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OpeningDate__c</fullName>
        <label>Opening Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReasonForChange__c</fullName>
        <label>Reason for Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <label>Transfer Value: Indochina Tax</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Transfer Value: Credit Limit</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Transfer Value: Consolidated Collateral</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Transfer Value: Indochina Collateral</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Amendment</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Typing error</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RemainingDays__c</fullName>
        <formula>IF(
    ExpiryDate__c &gt; TODAY(),
    ExpiryDate__c - TODAY(),
    NULL
)</formula>
        <label>Remaining Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequestDate__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TermsOfPayment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Terms of Payment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Payment Term</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Financial guarantee (Terms of Payment)</relationshipLabel>
        <relationshipName>FinancialGuarantee_TermsOfPayment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CI</fullName>
                </value>
                <value>
                    <fullName>CL</fullName>
                </value>
                <value>
                    <fullName>LC</fullName>
                </value>
                <value>
                    <fullName>OD</fullName>
                </value>
                <value>
                    <fullName>OT</fullName>
                </value>
                <value>
                    <fullName>ZC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Financial guarantee</label>
    <nameField>
        <displayFormat>BG-{0000000}</displayFormat>
        <label>Financial Guarantee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>